add_executable( ENDFtk.ControlRecord.test ControlRecord.test.cpp )
set( test_flags ${ENDFtk_compiler_flags} )
separate_arguments( test_flags_list UNIX_COMMAND "${test_flags}" )
foreach( flag IN LISTS test_flags_list )
    target_compile_options( ENDFtk.ControlRecord.test PUBLIC ${flag} )
endforeach( flag )
set_target_properties( ENDFtk.ControlRecord.test PROPERTIES LINK_FLAGS "${test_flags}" )
target_link_libraries( ENDFtk.ControlRecord.test PUBLIC ENDFtk )
add_test( NAME ENDFtk.ControlRecord COMMAND ENDFtk.ControlRecord.test ) 
