add_executable( HeadRecord.test HeadRecord.test.cpp )
set( test_flags ${ENDFtk_compiler_flags} )
separate_arguments( test_flags_list UNIX_COMMAND "${test_flags}" )
foreach( flag IN LISTS test_flags_list )
    target_compile_options( HeadRecord.test PUBLIC ${flag} )
endforeach( flag )
set_target_properties( HeadRecord.test PROPERTIES LINK_FLAGS "${test_flags}" )
target_link_libraries( HeadRecord.test PUBLIC ENDFtk )
add_test( NAME HeadRecord COMMAND HeadRecord.test ) 
