add_executable( ListRecord.test ListRecord.test.cpp )
set( test_flags ${ENDFtk_compiler_flags} )
separate_arguments( test_flags_list UNIX_COMMAND "${test_flags}" )
foreach( flag IN LISTS test_flags_list )
    target_compile_options( ListRecord.test PUBLIC ${flag} )
endforeach( flag )
set_target_properties( ListRecord.test PROPERTIES LINK_FLAGS "${test_flags}" )
target_link_libraries( ListRecord.test PUBLIC ENDFtk )
add_test( NAME ListRecord COMMAND ListRecord.test ) 
