add_executable( ENDFtk.ListRecord.test ListRecord.test.cpp )
set( test_flags ${ENDFtk_compiler_flags} )
separate_arguments( test_flags_list UNIX_COMMAND "${test_flags}" )
foreach( flag IN LISTS test_flags_list )
    target_compile_options( ENDFtk.ListRecord.test PUBLIC ${flag} )
endforeach( flag )
set_target_properties( ENDFtk.ListRecord.test PROPERTIES LINK_FLAGS "${test_flags}" )
target_link_libraries( ENDFtk.ListRecord.test PUBLIC ENDFtk )
add_test( NAME ENDFtk.ListRecord COMMAND ENDFtk.ListRecord.test ) 
